syntax = "proto3";

option java_package = "pers.xds.wtuapp.im.proto";
option java_outer_classname = "MsgReceiveProto";
option optimize_for = SPEED;

message MessageReceive {
  int32 receivedId = 1;
}